add oracle address

--- a/config.templte.json
+++ b/config.templte.json
@@ -19,5 +19,5 @@
     "Parameter": "Bool"
   },
   "CONTRACT": "0x3BD98A58930eE3a360493aA081758b36E263Bd49",
-  "ORACLE": ""
+  "ORACLE": "4E8tMjbh8TDjQfouWUUxKeh5ittG47hsNgwZL3Dwzm3LQMxm"
 }
